--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Dicee</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="assets/style/styles.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
       rel="stylesheet"
@@ -31,5 +31,6 @@
       >Kishore S</a
     >
     🎲
+    <script src="assets/scripts/index.js"></script>
   </footer>
 </html>
