--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>Dicee</title>
+    <title>Cool Dicee</title>
+    <link rel="icon" href="assets/images/icon.png" />
     <link rel="stylesheet" href="assets/style/styles.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
@@ -15,22 +16,23 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="" />
+        <img class="img1" src="assets/images/dice6.png" />
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="" />
+        <img class="img2" src="assets/images/dice6.png" />
       </div>
     </div>
+    <script src="assets/scripts/index.js"></script>
   </body>
 
   <footer>
+    <span>Refresh to play</span>
     🎲
     <a class="footer-link" href="https://justkishore.github.io/MySite/"
       >Kishore S</a
     >
     🎲
-    <script src="assets/scripts/index.js"></script>
   </footer>
 </html>
