Vesrion-2 first commit
Add roll button and responsiveness

--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
         <p>Player 2</p>
         <img class="img2" src="assets/images/dice6.png" />
       </div>
+
+      <button class="roll">Roll</button>
     </div>
     <script src="assets/scripts/index.js"></script>
   </body>
 
   <footer>
-    <span>Refresh to play</span>
+    <span>Roll to play</span>
     🎲
     <a class="footer-link" href="https://justkishore.github.io/MySite/"
       >Kishore S</a
